# era-solidity

./: .truffleignore  CMakeLists.txt  CONTRIBUTING.md  Changelog.md  README.md
.circleci/: config.yml
.github/tmp_disabled/: test.yaml
.github/workflows/: test.yaml  (+9 more)
cmake/: EthBuildInfo.cmake  EthCompilerSettings.cmake  FindZ3.cmake  jsoncpp.cmake
docs/: cheatsheet.rst  units-and-global-variables.rst  yul.rst
libdevcore/: CMakeLists.txt  Common.h  CommonData.h  SetOnce.h
libevmasm/: Assembly.cpp  Assembly.h  AssemblyItem.cpp  AssemblyItem.h  CMakeLists.txt  CommonSubexpressionEliminator.cpp  CommonSubexpressionEliminator.h  ControlFlowGraph.cpp  ControlFlowGraph.h  GasMeter.cpp  Inliner.cpp  Instruction.cpp  Instruction.h  KnownState.cpp  KnownState.h  LinkerObject.cpp  PeepholeOptimiser.cpp  PeepholeOptimiser.h  SemanticInformation.cpp  SemanticInformation.h  SimplificationRules.cpp  ZKEVMInstruction.cpp  ZKEVMInstruction.h
libjulia/: ASTDataForward.h
liblangutil/: CMakeLists.txt  EVMVersion.cpp  EVMVersion.h  SourceLocation.h  Token.h
libsolidity/: CMakeLists.txt
libsolutil/: CMakeLists.txt  Common.h  CommonData.h  SetOnce.h
libyul/: AsmAnalysis.cpp  AsmAnalysis.h  AsmCodeGen.cpp  AsmCodeGen.h  CMakeLists.txt  Dialect.cpp  Dialect.h  Object.h  YulString.h
scripts/: release_ppa.sh
solc/: CommandLineInterface.cpp  CommandLineInterface.h  CommandLineParser.cpp  CommandLineParser.h  main.cpp
test/: CMakeLists.txt  InteractiveTests.h  TestHelper.h  updFileCheckTest.py
tools/: CMakeLists.txt
tools/solOpt/: .clang-tidy  CMakeLists.txt  main.cpp
(+677 files in other folders)
